fix: dialog footer gombok gap javítás
A dialogFooter projected wrapper div egyetlen flex item volt,
így a dw__footer gap nem hatott a gombokra.
Megoldás: ::ng-deep .dw__footer > [dialogFooter] { display: contents }

--- a/src/app/shared/components/dialog-wrapper/dialog-wrapper.component.scss
+++ b/src/app/shared/components/dialog-wrapper/dialog-wrapper.component.scss
@@ -274,6 +274,13 @@ $gray-900: get-color('gray', 900);
 // ezért ::ng-deep szükséges a wrapper-ből való stílus alkalmazáshoz.
 
 :host ::ng-deep {
+  // --- Projected wrapper div-ek (dialogFooter, dialogBody stb.) ---
+  // Az ng-content projected <div dialogFooter> elem egyetlen flex item lenne,
+  // display: contents-szel a gyerekei (gombok) kozvetlenul a flex containerbe kerulnek.
+  .dw__footer > [dialogFooter] {
+    display: contents;
+  }
+
   // --- Footer gombok (minden dialógusban egységes) ---
   .dw__footer .btn {
     display: inline-flex;
